--- a/docs/css/demo.css
+++ b/docs/css/demo.css
@@ -14,6 +14,7 @@ a > h2 {
   margin: 0; 
   padding-left: 40px
 }
+
 a { 
   color: rgb(10, 96, 167); 
   text-decoration: none 
@@ -27,21 +28,14 @@ header {
   height: 5.8vh;
   justify-content: space-between;
   overflow: hidden; 
-  padding: 5px 10px 5px 5px; 
+  padding: 5px 10px 5px 5px;
+  top: 0;
   width: 100% 
 }
 header > a { border: none }
 
-header.sticky {
-  border-bottom: 1px solid #0263b2; 
-  position: fixed; 
-  top: 0; 
-}
-
-main { 
-  display: flex; 
-  margin-top: 8vh; 
-  width: 100vw 
+.sticky {
+  position: fixed
 }
 
 .box-shadow {
@@ -50,24 +44,40 @@ main {
   box-shadow: 0 1px 5px rgba(0,0,0,0.4);
 }
 
+.rotate45 { transform: rotate(45deg); transition: transform 500ms }
+.drag-handle { cursor: grab; cursor: -moz-grab; cursor: -webkit-grab; pointer-events: auto }
+.drag-handle:active { cursor: grabbing; cursor: -moz-grabbing; cursor: -webkit-grabbing }
+
 .note { 
   background: rgba(255,255,255);
   display: none; 
   height: 50vh;
-  left: 10vw; 
+  left: 10vw;
+  min-height: 100px;
+  min-width: 200px;
   opacity: 0;
   overflow-y: auto;
-  padding: 10px; 
   position: absolute;
+  resize: both;
   transition: opacity 400ms ease-in-out;
   top: 8vh; 
   width: 35vw
 }
-
-.note-control { display: flex; justify-content: flex-end }
+.note-control { align-items: center; background-color: #efe; display: flex; height: 5vh; justify-content: flex-end; position: relative; width: 100% }
 .note-control > svg { cursor: pointer; height: 3vh; width: 3vh }
 .note-control > svg > path { fill: #0263b2; height: 3vh; width: 3vh }
+.pin { transition: transform 500ms }
+.close { margin-right: 5px }
 .close:hover > path { fill: #900 }
+.note-content { padding: 0 5px 5px 5px }
+div.note::-webkit-scrollbar {
+  background-color: #efe;
+}
+div.note::-webkit-scrollbar-thumb {
+  background-color: #aaf;
+  height: 1vh;
+  outline: 1px solid #aaf;
+}
 
 .ask { cursor: pointer }
 .ask > path { fill: #0263b2 }
