--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -9,6 +9,19 @@ body {
   color: #aa8;
 }
 
+#titlebar {
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: none;
+  justify-content: flex-start;
+  width: 100%;
+}
+
+#titletext { 
+  margin-left: 10px;
+}
+
 #chart {
   height: 99%;
   float: left;
@@ -69,7 +82,7 @@ a:focus,
   cursor: pointer;
 }
 
-#social {
+#theme_toolbar {
   position: fixed;
   bottom: 5;
   right: 0;
@@ -79,15 +92,6 @@ a:focus,
   z-index: 800;
   white-space: nowrap;
   overflow: hidden;
-}
-
-#social a {
-  margin-left: -2px;
-  margin-right: 5px;
-  font-size: 10px;
-  font-family: "Trebuchet MS";
-  font-weight: lighter;
-  text-decoration: none;
 }
 
 .pagetitle {
@@ -199,28 +203,6 @@ option:hover {
   box-shadow: 0 0 15px #667;
 }
 
-iframe {
-  border: none;
-  margin-top: 10px;
-  margin-left: 0px;
-  width: 100%;
-  height: 100%;
-}
-
-.nbembed {
-  position: fixed;
-  top: 40px;
-  left: 40px;
-  border-top: solid;
-  width: -moz-calc(100% - 70px);
-  width: -webkit-calc(100% - 70px);
-  width: calc(100% - 70px);
-  height: -moz-calc(100% - 70px);
-  height: -webkit-calc(100% - 70px);
-  height: calc(100% - 70px);
-  text-align: center;
-}
-
 div.tooltip {
   line-height: 1;
   font-weight: bold;
@@ -229,13 +211,6 @@ div.tooltip {
   z-index: 2000;
   position: absolute;
   border: 1px solid;
-}
-
-#titlebar img:hover {
-  box-shadow: scale(1.4);
-  -moz-box-shadow: scale(1.4);
-  -webkit-transform: scale(1.4);
-  transform: scale(1.4);
 }
 
 .button:hover {
