--- a/docs/css/themes/dark.css
+++ b/docs/css/themes/dark.css
@@ -46,7 +46,7 @@ svg {
   border-color: rgba(255,255,255,0.2);
 }
 
-#stps, #days {
+#stp, #day {
   background: #222222;
   border-color: rgba(255,255,255,0.2);
   color: #aaaa88;
