--- a/docs/css/themes/light.css
+++ b/docs/css/themes/light.css
@@ -46,7 +46,7 @@ svg {
   border-color: rgba(0,0,0,0.2);
 }
 
-#stps, #days {
+#stp, #day {
   background: #eeeeee;
   border-color: rgba(0,0,0,0.2);
   color: #000000;
