--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -9,6 +9,7 @@ body {
 
 select {
   direction: rtl;
+  height: 1.5em;
   width: 130px;
 }
 
@@ -52,18 +53,23 @@ option:hover {
   color: #000;
   font-size: 0.7em;
   font-weight: bold;
-  left: 0px;
   opacity: 0.9;
   padding: 5px;
   position: fixed;
+  right: 0px;
   text-align: center;
-  width: 100%;
+  width: 20%;
   z-index: 1;
 }
 
 .dragdealer {
   height: 30px;
   z-index: 8;
+}
+
+.dragdealer.menu {
+  height: 18px;
+  width: 130px;
 }
 
 .dragdealer .handle {
@@ -135,7 +141,7 @@ option:hover {
   z-index: 0;
 }
 
-.loading > div {
+.loading>div {
   font-size: 75px;
   font-weight: bold;
 }
@@ -195,6 +201,13 @@ option:hover {
   top: 5px;
   width: 15%;
   z-index: 600001;
+}
+
+.panel-row {
+  align-items: center;
+  display: flex;
+  min-height: 1.3em;
+  justify-content: space-between;
 }
 
 .tooltip {
