--- a/docs/css/themes/light.css
+++ b/docs/css/themes/light.css
@@ -12,7 +12,7 @@ svg {
   background-color: #ffffff;
 }
 
-.panel-right-control {
+.menu-button {
   background-color: #ff6600;
   color: #ffffff;
 }
