--- a/docs/css/themes/dark.css
+++ b/docs/css/themes/dark.css
@@ -12,7 +12,7 @@ svg {
   background-color: #111111;
 }
 
-.panel-right-control {
+.menu-button {
   background-color: #444444;
   color: #aaaa88;
 }
